--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,18 @@ events {}
 
 http {
 
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
     server {
         listen 80;
         server_name _;
 
+        client_max_body_size 100M;
+
         # Serve static files
         location /static/ {
-            alias /static/;
-            autoindex on;
+            alias /staticfiles/;
             expires 30d;
             access_log off;
         }
@@ -20,8 +24,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_redirect off;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
-
