--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,15 @@ services:
       dockerfile: Dockerfile
     container_name: hr360-backend
     command: gunicorn hrms.wsgi:application --bind 0.0.0.0:8000
+    env_file:                 # 🔥 THIS WAS MISSING
+      - .env
     volumes:
       - ./Backend Project:/app
       - ./Backend Project/staticfiles:/app/staticfiles
-    ports:
-      - "8000"
     depends_on:
       - db
+    expose:
+      - "8000"
 
   nginx:
     image: nginx:latest
@@ -33,12 +35,12 @@ services:
     ports:
       - "8878:80"
     volumes:
-      # Mount collected static files
       - ./Backend Project/staticfiles:/staticfiles
-      # Use our custom nginx config
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+
     depends_on:
       - backend
 
 volumes:
   dbdata:
+
